fixed logo in mails, fixed small layout issues

--- a/coin-teams-war/src/main/webapp/css/teams.css
+++ b/coin-teams-war/src/main/webapp/css/teams.css
@@ -170,10 +170,13 @@ fieldset {
 .label-field-wrapper input[type=text],
 .label-field-wrapper input[type=email],
 .label-field-wrapper input[type=file],
-.label-field-wrapper textarea,
 .label-field-wrapper select {
 	width: 200px;
 	margin: 0 0 15px 15px;
+}
+
+.label-field-wrapper textarea {
+	margin: 0 0 0 15px;
 }
 
 .label-field-wrapper select {
@@ -189,12 +192,6 @@ fieldset {
   height: 100px;
 }
 
-.label-field-wrapper textarea.withinfo {
-	float: left;
-  margin-right: 10px;
-
-}
-
 .label-field-wrapper input[type=text].error,
 .label-field-wrapper input[type=email].error,
 .label-field-wrapper input[type=file].error,
@@ -206,7 +203,7 @@ fieldset {
   vertical-align: top;
   color: #999;
   font-style: italic;
-  margin: 0 10px 0 0;
+  margin: 0 0 0 115px;
 }
 
 .label-field-wrapper .inputinfo {
